--- a/web/css/main.css
+++ b/web/css/main.css
@@ -6,8 +6,8 @@ html, body {
 }
 
 body {
-    background-color: #A1C349;
-    color: white;
+    background-color: white;
+    color: black;
 }
 
 .container {
@@ -23,9 +23,12 @@ body {
 .left-panel > .content {
     padding-top: 4.5rem;
     padding-left: 1rem;
+    height: 100%;
+    width: 100%;
 }
 
 .right-panel {
+    background-color: #3bba21;
     flex: 3;
     display: flex;
     flex-direction: column;
@@ -34,4 +37,42 @@ body {
 
 .visualization-panel {
     flex: 1;
+}
+
+.gradient-container {
+    padding-top: 2rem;
+    height: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.gradient-container > .gradient-panel {
+    flex: 1;
+}
+
+.gradient-container > .gradient-separator {
+    flex: 1;
+}
+
+.gradient-container > .gradient-legend {
+    flex: 13;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 1.25rem;
+}
+
+.legend-container {
+
+}
+
+.legend-title {
+    font-variant: small-caps;
+}
+
+.legend-description {
+    font-weight: 300;
+    font-size: 1rem;
+    width: 50%;
 }
