--- a/web/css/main.css
+++ b/web/css/main.css
@@ -21,10 +21,15 @@ body {
 }
 
 .left-panel > .content {
-    padding-top: 4.5rem;
+    padding-top: 2.5rem;
     padding-left: 1rem;
     height: 100%;
     width: 100%;
+}
+
+.fun-time {
+    font-size: 1.25rem;
+    width:90%;
 }
 
 .right-panel {
