--- a/web/css/main.css
+++ b/web/css/main.css
@@ -28,7 +28,7 @@ body {
 }
 
 .fun-time {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
     width:90%;
 }
 
@@ -79,10 +79,20 @@ body {
 }
 
 .logo-container {
-    padding-top: 2rem;
+    padding-top: 1rem;
     width: 90%;
 }
 
 .logo-container img {
     width: 35%;
+}
+
+.smallprint {
+    padding-top:2rem;
+    font-size: 1rem;
+}
+
+.smallprint > a {
+    text-decoration: none;
+    color: black;
 }
