--- a/web/css/main.css
+++ b/web/css/main.css
@@ -19,12 +19,15 @@ body {
 .left-panel {
     padding-top: 1.5rem;
     padding-left: 1rem;
-    flex: 2;
+    flex: 4;
 }
 
 .left-panel > .content {
     height: 100%;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .fun-time {
@@ -32,9 +35,14 @@ body {
     width:90%;
 }
 
+.middle-panel {
+    flex: 3;
+    height:100%;
+}
+
 .right-panel {
     background-color: #3bba21;
-    flex: 3;
+    flex: 9;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -45,8 +53,7 @@ body {
 }
 
 .gradient-container {
-    padding-top: 2rem;
-    height: 50%;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -54,18 +61,20 @@ body {
 
 .gradient-container > .gradient-panel {
     flex: 1;
+    height: 100%;
 }
 
 .gradient-container > .gradient-separator {
-    flex: 1;
+    flex: 3;
 }
 
 .gradient-container > .gradient-legend {
-    flex: 13;
+    flex: 7;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-size: 1.25rem;
+    padding: 1rem 0;
 }
 
 .legend-title {
@@ -75,7 +84,7 @@ body {
 .legend-description {
     font-weight: 300;
     font-size: 1rem;
-    width: 50%;
+    width: 100%;
 }
 
 .logo-container {
